# student_control

./: .dockerignore  .gitignore  Dockerfile  Readme.md  Readme_ru.md  alembic.ini  constants.py  docker-compose.yaml  docker-compose.yml  inset_data_script.py  main.py  manage.py  pyproject.toml  requirements.txt  sql_als_hs_klsjdf.py  test.py  test2.py
database/: database.py  models.py
database/alembic/: env.py
sql scripts/: alembic_version.sql  completed_task_status.sql  create_tables.sql  enrollments.sql  get_data_example.sql  grades.sql  insert_data_script.py  insert_data_tables.sql  inset_data_script.py  stash_class.txt  subject_tasks.sql  subject_theory.sql  subjects.sql  task.sql  task_grades.sql  teacher_information.sql  user_task_files.sql  user_theme.sql  users.sql
test/: test_create_teacher.py  test_create_user.py  test_teacher_operations.py  utils.py
user_controls/: animation.py  average_grades_card.py  bg_animation.py  custom_input_field.py  grade_card.py  grades_card.py  input_filter.py  modal_alert_dialog.py  student_app_bar.py  student_container.py  student_subject_tasks_card.py  subject_description.py  tasks_card.py  teacher_add_task_card.py  teacher_cards.py  teacher_controls.py  todo_card.py  user_chang_field.py  user_image_picker.py  user_subjects_card.py
utils/: banners.py  create_container_home_view.py  display_error.py  exceptions.py  jwt_hash.py  lazy_db.py  middleware.py  new_router.py  routes_names.py  routes_url.py  validators.py  zip_file.py
views/: index_view.py  not_registered_view.py  not_teacher_view.py  routes.py
(+76 files in other folders)
