[tool.poetry]
name = "student-control"
version = "0.1.0"
description = ""
authors = ["spike <azamtoiri@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flet = "^0.20.2"
psycopg2 = "^2.9.9"
sqlalchemy = "^2.0.27"
flet-route = "^0.3.2"
flet-material = "^0.3.3"
passlib = "^1.7.4"
python-decouple = "^3.8"
bcrypt = "4.0.1"
flet-fastapi = "^0.20.2"
uvicorn = "^0.28.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
