[tool.poetry]
name = "student-control"
version = "0.1.0"
description = ""
authors = ["spike <azamtoiri@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flet = "0.21.1"
psycopg2 = "^2.9.9"
sqlalchemy = "^2.0.27"
flet-route = "^0.3.2"
flet-material = "^0.3.3"
passlib = "^1.7.4"
python-decouple = "^3.8"
bcrypt = "4.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
